--- a/app/src/main/res/layout/fragment_comida.xml
+++ b/app/src/main/res/layout/fragment_comida.xml
@@ -4,25 +4,62 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ComidaFragment"
+
     android:background="#F8C595">
 
-    <ScrollView
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
+        android:orientation="vertical"
+        >
 
-        <GridLayout
-            android:id="@+id/grid_layout"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:alignmentMode="alignMargins"
-            android:columnCount="2"
-            android:rowCount="10"
-            android:columnOrderPreserved="false"
-            android:padding="10dp"
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Comida"
+                android:textColor="@color/white"
+                android:textSize="30dp"
+                android:fontFamily="@font/baloo_chettan"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+        <EditText
+            android:id="@+id/filter_Favorites"
+            android:layout_marginTop="10dp"
+            android:layout_width="380dp"
+            android:layout_height="40dp"
+            android:background="@drawable/lavender_border"
+            android:drawableRight="@drawable/ic_search_orange"
+            android:paddingRight="20dp"
+            android:layout_gravity="center"
             >
-        </GridLayout>
-    </ScrollView>
+        </EditText>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            >
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="16dp"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:spanCount="2"
+                />
+        </LinearLayout>
+
+    </LinearLayout>
+
+
 </FrameLayout>
