--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,8 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/abril_fatface</item>
+        <item>@font/baloo_bhai_2</item>
+        <item>@font/baloo_chettan</item>
         <item>@font/inter</item>
         <item>@font/inter_thin</item>
     </array>
