--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/bannercomida2">
+    android:background="@drawable/img_bannercomida2">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
