--- a/app/src/main/res/layout/activity_recover.xml
+++ b/app/src/main/res/layout/activity_recover.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/bannercomida2"
+    android:background="@drawable/img_bannercomida2"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
