--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/bannercomida2"
+    android:background="@drawable/img_bannercomida2"
     tools:context=".actividades.ActivitySignUp">
 
     <androidx.cardview.widget.CardView
