--- a/app/src/main/res/layout/fragment_carrito_compras.xml
+++ b/app/src/main/res/layout/fragment_carrito_compras.xml
@@ -20,34 +20,39 @@
             android:padding="10dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+
+                >
 
                 <ImageView
+                    android:id="@+id/back_confirmar_compra"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/ic_shopping" />
+                    android:background="@drawable/arrow_white"
+                    android:layout_marginRight="90dp"
+                    >
+                </ImageView>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Carrito"
+                    android:text="CARRITO"
+                    android:fontFamily="@font/baloo_chettan"
                     android:textColor="@color/white"
                     android:textSize="30dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    />
+
             </LinearLayout>
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="5dp"
-                android:background="@color/colorIconos" />
 
         </LinearLayout>
 
     </ScrollView>
 
-    <!-- Aquí está el botón, ahora al final de la pantalla -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/confirm_button"
         android:layout_width="200dp"
@@ -59,6 +64,7 @@
         app:backgroundTint="@null"
         android:gravity="center_horizontal"
         android:padding="12dp"
+        android:fontFamily="@font/baloo_chettan"
         android:text="Confirmar"
         android:textColor="@color/white" />
 
