--- a/app/src/main/res/layout/fragment_confirmar_pedido.xml
+++ b/app/src/main/res/layout/fragment_confirmar_pedido.xml
@@ -21,23 +21,33 @@
             android:padding="10dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+
+                >
 
                 <ImageView
+                    android:id="@+id/back_carrito_compras"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:background="@drawable/baseline_check_circle_outline_24" />
+                    android:background="@drawable/arrow_white"
+                    android:layout_marginRight="90dp"
+                    >
+                </ImageView>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="PEDIDO"
+                    android:fontFamily="@font/baloo_chettan"
                     android:textColor="@color/white"
                     android:textSize="30dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_gravity="center"
+                    />
+
             </LinearLayout>
             <ScrollView
                 android:layout_width="match_parent"
@@ -66,20 +76,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Total: "
+            android:background="@drawable/border"
+            android:padding="10dp"
+            android:fontFamily="@font/baloo_chettan"
             android:textSize="16sp" />
 
         <com.google.android.material.button.MaterialButton
-    android:id="@+id/confirm_button"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
-    android:background="@drawable/button_custom_oranje"
-    app:backgroundTint="@null"
-    android:gravity="center_horizontal"
-    android:padding="12dp"
+            android:id="@+id/confirm_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/button_custom_oranje"
+            app:backgroundTint="@null"
+            android:gravity="center_horizontal"
+            android:fontFamily="@font/baloo_chettan"
+            android:padding="12dp"
             android:textSize="20dp"
-    android:text="Confirmar pedido"
-    android:textColor="@color/white" />
+            android:text="Confirmar pedido"
+            android:textColor="@color/white" />
 
 
     </LinearLayout>
