--- a/app/src/main/res/layout/fragment_pedidos.xml
+++ b/app/src/main/res/layout/fragment_pedidos.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pedidos"
+    tools:context=".PedidosLista"
     android:background="#F8C595">
 
     <LinearLayout
