--- a/app/src/main/res/layout/fragment_pedidos_cencelado.xml
+++ b/app/src/main/res/layout/fragment_pedidos_cencelado.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/vacio" />
+            android:src="@drawable/img_vacio" />
 
         <TextView
             android:layout_width="wrap_content"
