--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/img_bannercomida2"
+    android:background="@drawable/bannercomidac"
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
@@ -136,7 +136,6 @@
                 android:textColor="#0D66FF"
                 android:linksClickable="true"
                 android:onClick="onRegisterLinkClicked"/>
-
         </LinearLayout>
 
     </LinearLayout>
