--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,14 +41,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Nombre de usuario"
+                        android:text="juampa"
                         android:textColor="@android:color/black"
                         android:textSize="18sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="U20202222"
+                        android:text="U75411243"
                         android:textColor="@android:color/black"
                         android:textSize="14sp" />
 
