--- a/app/src/main/res/layout/fragment_confirmacion.xml
+++ b/app/src/main/res/layout/fragment_confirmacion.xml
@@ -35,10 +35,9 @@
         android:gravity="center_horizontal"
         android:padding="12dp"
         android:fontFamily="@font/baloo_chettan"
-        android:text="HOME"
+        android:text="VOLVER:'v"
         android:textColor="@color/white"
         android:layout_marginTop="50dp"
         />
-
 
 </LinearLayout>
