--- a/app/src/main/res/layout/fragment_favoritos.xml
+++ b/app/src/main/res/layout/fragment_favoritos.xml
@@ -24,7 +24,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Favoritos"
+                android:text="Favorito"
                 android:textColor="@color/botonesColor"
                 android:textSize="30dp"
                 android:fontFamily="@font/baloo_chettan"
