--- a/app/src/main/res/layout/fragment_pago.xml
+++ b/app/src/main/res/layout/fragment_pago.xml
@@ -140,6 +140,11 @@
                 android:textStyle="bold"
                 />
 
+            <com.google.android.gms.maps.MapView
+                android:id="@+id/mapView"
+                android:layout_width="360dp"
+                android:layout_height="217dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
